# ishihara-dot-plate-generator

./: .gitignore  LICENSE  Makefile  README.md  mask_module.md  pyproject.toml  requirements.txt  task_breakdown.md
.github/workflows/: python-package.yml
src/app/: main.py
src/app/core/: session.py
src/app/gui/: __init__.py  main_window.py  test_sound.py
src/app/resources/: session.json
src/app/utils/: image_pool.py
src/plates/: overall_summary.json
src/plates/1/: summary.json
src/plates/10/: summary.json
src/plates/2/: summary.json
src/plates/3/: summary.json
src/plates/4/: summary.json
src/plates/5/: summary.json
src/plates/6/: summary.json
src/plates/7/: summary.json
src/plates/8/: summary.json
src/plates/9/: summary.json
src/plates/A/: summary.json
src/plates/B/: summary.json
src/plates/C/: summary.json
src/plates/D/: summary.json
src/plates/E/: summary.json
src/plates/F/: summary.json
src/plates/G/: summary.json
src/plates/H/: summary.json
src/plates/I/: summary.json
src/plates/J/: summary.json
src/plates/K/: summary.json
src/plates/L/: summary.json
src/plates/M/: summary.json
src/plates/N/: summary.json
src/plates/O/: summary.json
src/plates/P/: summary.json
src/resources/: color_palettes.json  color_palettes_backup.json
src/utils/: generate_masks.md  generate_masks.py  generate_plates.py
tests/: conftest.py  test_generate_masks.py  test_generate_plates.py  test_generate_plates_cache.py  test_generate_plates_extra.py  test_image_pool.py  test_main_window.py  test_session.py
(+370 files in other folders)
